<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="100dp"
        android:maxHeight="100dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_up"
        style="@style/ParentButton"
        android:layout_width="match_parent"
        android:textSize="18sp"
        android:minHeight="66dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="34dp"
        android:layout_marginBottom="20dp"
        android:background="@color/greenButton"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/lbl_sign_in_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/lbl_sign_in_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:minHeight="66dp"
        android:background="@color/facebook"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/lbl_sign_in_twitter"
        android:layout_marginHorizontal="34dp"
        >
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_facebook"
            />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/ParentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_with_facebook"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lbl_sign_in_twitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:minHeight="66dp"
        android:background="@color/twitter"
        android:orientation="horizontal"
        android:layout_marginBottom="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txt_already_have_account"
        android:layout_marginHorizontal="34dp"
        >
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_twitter"
            />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/ParentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_with_twitter"
            android:layout_centerInParent="true"
            android:layout_gravity="center|center_horizontal"
            android:gravity="center_horizontal"
            />
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_already_have_account"
        style="@style/ParentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/already_have_account_skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>